--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.gif"
 	</head>
-	<body bgcolor ="#da77f2" background="photography.png">
+	<body bgcolor ="#da77f2" >
 	  <h3> THÔNG TIN CÁ NHÂN </h3>
 	  <hr color="Blue" Size="5">
 	  <img src="no_avatar.png" height="200" align="left">
@@ -48,4 +48,5 @@
 		<p>nhạc ăn cắp nè </p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/G_YHM_-tUiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</body>
+	   
 </html>
